--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Transitive by TEMPLATED</title>
+		<title>Robin Köstler</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,8 +23,8 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="#">Generic</a></li>
-					<li><a href="#">Elements</a></li>
+					<li><a href="#">Anki</a></li>
+					<li><a href="#">Music</a></li>
 				</ul>
 			</nav>
 
@@ -37,8 +37,7 @@
 			<section id="banner" data-video="images/banner">
 				<div class="inner">
 					<h1>Transitive</h1>
-					<p>A full responsive, business-oriented HTML5/CSS3 template<br />
-					built by <a href="https://templated.co/">Templated</a> and released under the <a href="https://templated.co/license">Creative Commons</a>.</p>
+					<p>I work on fully homomorphic encryption at the University of Luxembourg.<br />
 					<a href="#one" class="button special scrolly">Get Started</a>
 				</div>
 			</section>
