--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
 		-->
 			<section id="banner" data-video="images/banner">
 				<div class="inner">
-					<h1>Transitive</h1>
 					<p>I work on fully homomorphic encryption at the University of Luxembourg.<br />
-					<a href="#one" class="button special scrolly">Get Started</a>
+					<a href="#one" class="button special scrolly">What this is about</a>
 				</div>
 			</section>
 
@@ -47,9 +46,9 @@
 				<div class="inner">
 					<div>
 						<div class="box">
-							<div class="image fit">
+							<!-- <div class="image fit">
 								<img src="images/pic01.jpg" alt="" />
-							</div>
+							</div> -->
 							<div class="content">
 								<header class="align-center">
 									<h2>Lorem ipsum dolor</h2>
@@ -66,6 +65,7 @@
 
 		<!-- Two -->
 			<section id="two" class="wrapper style3">
+				<h1>Special interests</h1>
 				<div class="inner">
 					<div id="flexgrid">
 						<div>
