--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<section id="banner" data-video="images/banner">
 				<div class="inner">
 					<p>I work on fully homomorphic encryption at the University of Luxembourg.<br />
-					<a href="#one" class="button special scrolly">What this is about</a>
+					<a href="#one" class="button special scrolly">Work related stuff</a> <a href="#two" class="button scrolly">Special interests</a></p>
 				</div>
 			</section>
 
@@ -62,35 +62,32 @@
 					</div>
 				</div>
 			</section>
-
-		<!-- Two -->
+			
+			<!-- Two -->
 			<section id="two" class="wrapper style3">
-				<h1>Special interests</h1>
 				<div class="inner">
+					<div class="content">
+						<header class="align-center">
+							<h2>Special interests/h2>
+						</header>
+						<hr />
+					</div>
+					
 					<div id="flexgrid">
 						<div>
 							<header>
-								<h3>Tempus Feugiat</h3>
+								<h3>Music</h3>
 							</header>
-							<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu</p>
+							<p>I'm a passionate musician, playing guitar and piano as well as being a composer</p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Learn More</a></li>
 							</ul>
 						</div>
 						<div>
 							<header>
-								<h3>Aliquam Nulla</h3>
+								<h3>Anki</h3>
 							</header>
-							<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed </p>
-							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
-							</ul>
-						</div>
-						<div>
-							<header>
-								<h3>Sed Magna</h3>
-							</header>
-							<p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula.</p>
+							<p>Anki is a powerful tool for efficiently learning flashcards, i.e. any type of information that is digestible.</p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Learn More</a></li>
 							</ul>
