--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 		-->
 			<section id="banner" data-video="images/banner">
 				<div class="inner">
-					<p>I work on fully homomorphic encryption at the University of Luxembourg.<br />
-					<a href="#one" class="button special scrolly">Work related stuff</a> <a href="#two" class="button scrolly">Special interests</a></p>
+					<p>I work on fully homomorphic encryption at the <a href="https://wwwfr.uni.lu/snt/people/robin_koestler">University of Luxembourg</a>.<br />
+					<a href="#one" class="button special scrolly">Work related stuff</a> <a href="#two" class="button special scrolly">Special interests</a></p>
 				</div>
 			</section>
 
@@ -78,16 +78,16 @@
 							<header>
 								<h3>Music</h3>
 							</header>
-							<p>I'm a passionate musician, playing guitar and piano as well as being a composer</p>
+							<p>I'm a passionate musician, playing guitar and piano as well as being a composer.</p>
 							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
+								<li><a href="#" class="button alt">Explore my musical journey</a></li>
 							</ul>
 						</div>
 						<div>
 							<header>
 								<h3>Anki</h3>
 							</header>
-							<p>Anki is a powerful tool for efficiently learning flashcards, i.e. any type of information that is digestible.</p>
+							<p><b><a href="https://apps.ankiweb.net/">Anki</a></b> is a powerful tool for efficiently learning flashcards, i.e. any type of information that is digestible.</p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Learn More</a></li>
 							</ul>
