--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Transitive <span>by TEMPLATED</span></a></div>
+				<div class="logo"><a href="index.html">Robin Köstler's personal page<span></span></a></div>
 				<a href="#menu" class="toggle"><span>Menu</span></a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
+				
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="#">Anki</a></li>
@@ -37,6 +38,7 @@
 			<section id="banner" data-video="images/banner">
 				<div class="inner">
 					<p>I work on fully homomorphic encryption at the <a href="https://wwwfr.uni.lu/snt/people/robin_koestler">University of Luxembourg</a>.<br />
+						<br />
 					<a href="#one" class="button special scrolly">Work related stuff</a> <a href="#two" class="button special scrolly">Special interests</a></p>
 				</div>
 			</section>
@@ -68,7 +70,7 @@
 				<div class="inner">
 					<div class="content">
 						<header class="align-center">
-							<h2>Special interests/h2>
+							<h2>Special interests</h2>
 						</header>
 						<hr />
 					</div>
