--- a/index.html
+++ b/index.html
@@ -53,12 +53,10 @@
 							</div> -->
 							<div class="content">
 								<header class="align-center">
-									<h2>Lorem ipsum dolor</h2>
-									<p>maecenas feugiat ex purus, quis volutpat lacus placerat</p>
+									<h2>Work in Cryptography</h2>
+									<p>Currently, I am a Ph.D. student at the <a href="http://www.crypto-uni.lu/index.html">Applied Crypto Group</a> at the <a href="https://wwwen.uni.lu/">University of Luxembourg</a> under the supervision of <a href="http://www.crypto-uni.lu/jscoron/index.html">Prof. Jean-Sébastien Coron</a>.</p>
 								</header>
 								<hr />
-								<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
-								<p>Vivamus fermentum nibh vel pharetra blandit. Cras a purus urna. Sed et libero ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse id hendrerit felis. Nulla viverra tempor dui at congue. Pellentesque quis nulla ornare, congue nisi id, finibus nulla. Aliquam sit amet hendrerit purus. Donec libero massa, posuere fermentum eros sit amet, maximus fringilla augue. Maecenas at rhoncus lorem. Vivamus ultricies consequat est, efficitur convallis libero. Vivamus rutrum semper mauris, vitae consequat eros tempor ac. Pellentesque et ornare sapien</p>
 							</div>
 						</div>
 					</div>
@@ -80,7 +78,7 @@
 							<header>
 								<h3>Music</h3>
 							</header>
-							<p>I'm a passionate musician, playing guitar and piano as well as being a composer.</p>
+							<p>I'm a passionate musician, playing guitar and piano.</p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Explore my musical journey</a></li>
 							</ul>
@@ -93,6 +91,11 @@
 							<ul class="actions">
 								<li><a href="#" class="button alt">Learn More</a></li>
 							</ul>
+						</div>
+						<div>
+							<header>
+								<h3>Miscellaneous</h3>
+							</header>
 						</div>
 					</div>
 				</div>
