--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
 									<p>Currently, I am a Ph.D. student at the <a href="http://www.crypto-uni.lu/index.html">Applied Crypto Group</a> at the <a href="https://wwwen.uni.lu/">University of Luxembourg</a> under the supervision of <a href="http://www.crypto-uni.lu/jscoron/index.html">Prof. Jean-Sébastien Coron</a>.</p>
 								</header>
 								<hr />
+								<p>My research interests are in the area of cryptography, in particular in the design and implementation of cryptographic protocols and algorithms.
+									 I am currently working on fully homomorphic encryption (FHE), which allows to perform arbitrary computations on encrypted data.
+									  My goal is to improve the efficiency of FHE schemes, so that they can be used in practice.</p>
+								<!-- bullet points  in html  -->
+								<h3>Short Curriculum vitae</h3>:
+								<ul>
+									<li>B.Sc. at the <a href="https://www.uni-bayreuth.de/en">University of Bayreuth</a> under the supervision of <a href="http://www.mathe2.uni-bayreuth.de/stoll/">Prof. Dr. Michael Stoll</a></li>
+									<li>M.Sc. at the <a href="https://uni-freiburg.de/en/">University of Freiburg</a> under the supervision of <a href="https://math.commelin.net/">Dr. Johannes Commelin</a></li>
 							</div>
 						</div>
 					</div>
