--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 								</header>
 								<hr />
 								<p>My research interests are in the area of cryptography, in particular in the design and implementation of cryptographic protocols and algorithms.
-									 I am currently working on fully homomorphic encryption (FHE), which allows to perform arbitrary computations on encrypted data.
-									  My goal is to improve the efficiency of FHE schemes, so that they can be used in practice.</p>
+									 I am currently working on <a href="https://en.wikipedia.org/wiki/Homomorphic_encryption">fully homomorphic encryption (FHE)</a>, which allows to perform arbitrary computations on encrypted data.
+									  My goal is to improve the efficiency of the FHE bootstrapping, which is the pivotal procedure due to which FHE still remains a not-so-much practical.</p>
 								<!-- bullet points  in html  -->
-								<h3>Short Curriculum vitae</h3>:
+								<h3>Short Curriculum vitae</h3>
 								<ul>
-									<li>B.Sc. at the <a href="https://www.uni-bayreuth.de/en">University of Bayreuth</a> under the supervision of <a href="http://www.mathe2.uni-bayreuth.de/stoll/">Prof. Dr. Michael Stoll</a></li>
-									<li>M.Sc. at the <a href="https://uni-freiburg.de/en/">University of Freiburg</a> under the supervision of <a href="https://math.commelin.net/">Dr. Johannes Commelin</a></li>
+									<li>2020: B.Sc. in mathematics at the <a href="https://www.uni-bayreuth.de/en">University of Bayreuth</a> under the supervision of <a href="http://www.mathe2.uni-bayreuth.de/stoll/">Prof. Dr. Michael Stoll</a></li>
+									<li>2022: M.Sc. in mathematics at the <a href="https://uni-freiburg.de/en/">University of Freiburg</a> under the supervision of <a href="https://math.commelin.net/">Dr. Johannes Commelin</a></li>
 							</div>
 						</div>
 					</div>
