--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<h3>Short Curriculum vitae</h3>
 								<ul>
 									<li>2020: B.Sc. in mathematics at the <a href="https://www.uni-bayreuth.de/en">University of Bayreuth</a> under the supervision of <a href="http://www.mathe2.uni-bayreuth.de/stoll/">Prof. Dr. Michael Stoll</a></li>
-									<li>2022: M.Sc. in mathematics at the <a href="https://uni-freiburg.de/en/">University of Freiburg</a> under the supervision of <a href="https://math.commelin.net/">Dr. Johannes Commelin</a></li>
+									<li>2022: M.Sc. in mathematics at the <a href="https://uni-freiburg.de/en/" target="_blank" rel="noopener noreferrer">University of Freiburg</a> under the supervision of <a href="https://math.commelin.net/">Dr. Johannes Commelin</a></li>
 							</div>
 						</div>
 					</div>
