--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<hr />
 								<p>My research interests are in the area of cryptography, in particular in the design and implementation of cryptographic protocols and algorithms.
 									 I am currently working on <a href="https://en.wikipedia.org/wiki/Homomorphic_encryption">fully homomorphic encryption (FHE)</a>, which allows to perform arbitrary computations on encrypted data.
-									  My goal is to improve the efficiency of the FHE bootstrapping, which is the pivotal procedure due to which FHE still remains a not-so-much practical.</p>
+									  My goal is to improve the efficiency of the FHE bootstrapping, which is the pivotal procedure due to which FHE still remains not-so-much practical.</p>
 								<!-- bullet points  in html  -->
 								<h3>Short Curriculum vitae</h3>
 								<ul>
@@ -215,6 +215,7 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<!-- usage: onclick="openInNewBackgroundTab(event)" -->
 			<script>
 				function openInNewBackgroundTab(event) {
 				event.preventDefault(); // Prevents the default link behavior
