--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<div class="content">
 								<header class="align-center">
 									<h2>Work in Cryptography</h2>
-									<p>Currently, I am a Ph.D. student at the <a href="http://www.crypto-uni.lu/index.html">Applied Crypto Group</a> at the <a href="https://wwwen.uni.lu/">University of Luxembourg</a> under the supervision of <a href="http://www.crypto-uni.lu/jscoron/index.html">Prof. Jean-Sébastien Coron</a>.</p>
+									<p>Currently, I am a Ph.D. student in the <a href="http://www.crypto-uni.lu/index.html">Applied Crypto Group</a> at the <a href="https://wwwen.uni.lu/">University of Luxembourg</a> under the supervision of <a href="http://www.crypto-uni.lu/jscoron/index.html">Prof. Jean-Sébastien Coron</a>.</p>
 								</header>
 								<hr />
 								<p>My research interests are in the area of cryptography, in particular in the design and implementation of cryptographic protocols and algorithms.
