--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 								<ul>
 									<li>2020: B.Sc. in mathematics at the <a href="https://www.uni-bayreuth.de/en">University of Bayreuth</a> under the supervision of <a href="http://www.mathe2.uni-bayreuth.de/stoll/">Prof. Dr. Michael Stoll</a></li>
 									<li>2022: M.Sc. in mathematics at the <a href="https://uni-freiburg.de/en/" onclick="openInNewBackgroundTab(event)">University of Freiburg</a> under the supervision of <a href="https://math.commelin.net/">Dr. Johannes Commelin</a></li>
+								<h3>Presency at:</h3>
+								<ul>
+									<li><a href="https://crypto.stackexchange.com/users/109673/the-dice-man">StackOverflow</a></li>
+								</ul>	
 							</div>
 						</div>
 					</div>
