--- a/index.html
+++ b/index.html
@@ -65,9 +65,12 @@
 								<ul>
 									<li>2020: B.Sc. in mathematics at the <a href="https://www.uni-bayreuth.de/en">University of Bayreuth</a> under the supervision of <a href="http://www.mathe2.uni-bayreuth.de/stoll/">Prof. Dr. Michael Stoll</a></li>
 									<li>2022: M.Sc. in mathematics at the <a href="https://uni-freiburg.de/en/" onclick="openInNewBackgroundTab(event)">University of Freiburg</a> under the supervision of <a href="https://math.commelin.net/">Dr. Johannes Commelin</a></li>
+								<br>
 								<h3>Presency at:</h3>
 								<ul>
 									<li><a href="https://crypto.stackexchange.com/users/109673/the-dice-man">StackOverflow</a></li>
+									<li><a href="https://github.com/robinkoestler>">GitHub</a></li>
+
 								</ul>	
 							</div>
 						</div>
@@ -159,15 +162,15 @@
 				<div class="inner">
 
 					<header class="align-center">
-						<h2>Morbi interdum mollis sapien</h2>
-						<p>Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
+						<h2>Contact Information</h2>
+						<p>firstname.lastname@uni.lu</p>
 					</header>
 
 				</div>
 			</section>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper">
+			<!-- <footer id="footer" class="wrapper">
 				<div class="inner">
 					<section>
 						<div class="box">
@@ -207,9 +210,12 @@
 						</div>
 					</section>
 				</div>
-			</footer>
+			</footer> -->
+
 			<div class="copyright">
 				Powered by: <a href="https://templated.co/">Templated.co</a>.
+				<br>
+				All pictures are copyright of Robin Köstler.
 			</div>
 
 		<!-- Scripts -->
@@ -219,6 +225,7 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+
 			<!-- usage: onclick="openInNewBackgroundTab(event)" -->
 			<script>
 				function openInNewBackgroundTab(event) {
