--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<h3>Presency at:</h3>
 								<ul>
 									<li><a href="https://crypto.stackexchange.com/users/109673/the-dice-man">StackOverflow</a></li>
-									<li><a href="https://github.com/robinkoestler>">GitHub</a></li>
+									<li><a href="https://github.com/robinkoestler">GitHub</a></li>
 
 								</ul>	
 							</div>
@@ -116,7 +116,8 @@
 				</div>
 			</section>
 
-		<!-- Three -->
+		<!-- Below is a example of a two column layout -->
+			<!-- Three
 			<section id="three" class="wrapper style2">
 				<div class="inner">
 					<div class="grid-style">
@@ -155,7 +156,7 @@
 
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Four -->
 			<section id="four" class="wrapper style3">
@@ -168,7 +169,8 @@
 
 				</div>
 			</section>
-
+		
+		<!-- below is a template for a "Formular" -->
 		<!-- Footer -->
 			<!-- <footer id="footer" class="wrapper">
 				<div class="inner">
@@ -213,6 +215,7 @@
 			</footer> -->
 
 			<div class="copyright">
+				<br
 				Powered by: <a href="https://templated.co/">Templated.co</a>.
 				<br>
 				All pictures are copyright of Robin Köstler.
