--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<div class="inner">
 					<p>I work on fully homomorphic encryption at the <a href="https://wwwfr.uni.lu/snt/people/robin_koestler">University of Luxembourg</a>.<br />
 						<br />
-					<a href="#one" class="button special scrolly">Work related stuff</a> <a href="#two" class="button special scrolly">Special interests</a></p>
+					<a href="#one" class="button special scrolly">Work in Academia</a> <a href="#two" class="button special scrolly">Special interests</a></p>
 				</div>
 			</section>
 
@@ -112,6 +112,9 @@
 								<h3>Miscellaneous</h3>
 							</header>
 						</div>
+					</div>
+					<div>
+						<hr />
 					</div>
 				</div>
 			</section>
@@ -218,7 +221,7 @@
 				<br
 				Powered by: <a href="https://templated.co/">Templated.co</a>.
 				<br>
-				All pictures are copyright of Robin Köstler.
+				All pictures are copyright of Robin Köstler unless stated otherwise.
 			</div>
 
 		<!-- Scripts -->
