--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 				<div class="inner">
 					<p>I work on fully homomorphic encryption at the <a href="https://wwwfr.uni.lu/snt/people/robin_koestler">University of Luxembourg</a>.<br />
 						<br />
-					<a href="#one" class="button special scrolly">Work in Academia</a> <a href="#two" class="button special scrolly">Special interests</a></p>
+					<a href="#one" class="button special scrolly">Work in Academia</a>
+					<a href="#two" class="button special scrolly">Special interests</a>
+					<a href="#four" class="button special scrolly">Contact Information</a>
+				</p>
 				</div>
 			</section>
 
@@ -65,6 +68,7 @@
 								<ul>
 									<li>2020: B.Sc. in mathematics at the <a href="https://www.uni-bayreuth.de/en">University of Bayreuth</a> under the supervision of <a href="http://www.mathe2.uni-bayreuth.de/stoll/">Prof. Dr. Michael Stoll</a></li>
 									<li>2022: M.Sc. in mathematics at the <a href="https://uni-freiburg.de/en/" onclick="openInNewBackgroundTab(event)">University of Freiburg</a> under the supervision of <a href="https://math.commelin.net/">Dr. Johannes Commelin</a></li>
+								</ul>
 								<br>
 								<h3>Presency at:</h3>
 								<ul>
