--- a/index.html
+++ b/index.html
@@ -63,18 +63,16 @@
 								<p>My research interests are in the area of cryptography, in particular in the design and implementation of cryptographic protocols and algorithms.
 									 I am currently working on <a href="https://en.wikipedia.org/wiki/Homomorphic_encryption">fully homomorphic encryption (FHE)</a>, which allows to perform arbitrary computations on encrypted data.
 									  My goal is to improve the efficiency of the FHE bootstrapping, which is the pivotal procedure due to which FHE still remains not-so-much practical.</p>
-								<!-- bullet points  in html  -->
+								<p> I did <a href="A-survey-on-modern-fully-homomorphic-encryption/_build/_page/Thesis/html/Thesis.html">a survey on modern fully homomorphic encryption in my master's thesis</a>, where I implemented and analysed the general bootstrapping approach presented in <a href="https://eprint.iacr.org/2021/691.pdf">this paper</a> (2021). </p>
 								<h3>Short Curriculum vitae</h3>
 								<ul>
 									<li>2020: B.Sc. in mathematics at the <a href="https://www.uni-bayreuth.de/en">University of Bayreuth</a> under the supervision of <a href="http://www.mathe2.uni-bayreuth.de/stoll/">Prof. Dr. Michael Stoll</a></li>
 									<li>2022: M.Sc. in mathematics at the <a href="https://uni-freiburg.de/en/" onclick="openInNewBackgroundTab(event)">University of Freiburg</a> under the supervision of <a href="https://math.commelin.net/">Dr. Johannes Commelin</a></li>
 								</ul>
-								<br>
 								<h3>Presency at:</h3>
 								<ul>
 									<li><a href="https://crypto.stackexchange.com/users/109673/the-dice-man">StackOverflow</a></li>
 									<li><a href="https://github.com/robinkoestler">GitHub</a></li>
-
 								</ul>	
 							</div>
 						</div>
