--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="#">Anki</a></li>
+					<li><a href="Anki/ankiblog.html">Anki</a></li>
 					<li><a href="#">Music</a></li>
 				</ul>
 			</nav>
