--- a/Anki/ankiblog.html
+++ b/Anki/ankiblog.html
@@ -1,62 +1,64 @@
 <!DOCTYPE HTML>
-
+<!--
+	Transitive by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 <html>
+	<head>
+		<title>Robin Köstler</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body>
 
+		<!-- Header -->
+			<header id="header" class="alt">
+				<div class="logo"><a href="index.html">Robin Köstler's personal page<span></span></a></div>
+				<a href="#menu" class="toggle"><span>Menu</span></a>
+			</header>
 
-    <head>
-        <title>Robin Köstler</title>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />  
+		<!-- Nav -->
+			<nav id="menu">
+				
+				<ul class="links">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="Anki/ankiblog.html">Anki</a></li>
+					<li><a href="#">Music</a></li>
+				</ul>
+			</nav>
 
-        <link rel="stylesheet" href="assets/css/main.css" />
+		<!-- Banner -->
+		<!--
+			To use a video as your background, set data-video to the name of your video without
+			its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
+			formats to work correctly.
+		-->
 
-    </head>
+		<!-- One -->
+			<section id="one" class="wrapper style2">
+				<div class="inner">
+					<div>
+						<div class="box">
+							<!-- <div class="image fit">
+								<img src="images/pic01.jpg" alt="" />
+							</div> -->
+							<div class="content">
+								<header class="align-center">
+									<h2>Work in Cryptography</h2>
+									<p>Currently, I am a Ph.D. student in the <a href="http://www.crypto-uni.lu/index.html">Applied Crypto Group</a> at the <a href="https://wwwen.uni.lu/">University of Luxembourg</a> under the supervision of <a href="http://www.crypto-uni.lu/jscoron/index.html">Prof. Jean-Sébastien Coron</a>.</p>
+								</header>
+								<hr />
+							
+								</ul>	
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			
 
-    <body>
-
-        <!-- Header -->
-            <header id="header" class="alt">
-                <div class="logo"><a href="index.html">Robin Köstler's personal page<span></span></a></div>
-                <a href="#menu" class="toggle"><span>Menu</span></a>
-            </header>
-
-        <!-- Nav -->
-            <nav id="menu">
-
-                <ul class="links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="ankiblog.html">Anki</a></li>
-                    <li><a href="music.html">Music</a></li>
-                </ul>
-            </nav>
-
-        <!-- Banner -->
-        <!--
-            To use a video as your background, set data-video to the name of your video without
-            its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
-            formats to work correctly.
-        -->
-            <section id="banner" data-video="images/banner">
-                <div class="inner">
-                    <p>I work on fully homomorphic encryption at the <a href="https://wwwfr.uni.lu/snt/people/robin_koestler">University of Luxembourg</a>.<br />
-                        <br />
-                    <a href="#one" class="button special scrolly">Work in Academia</a>
-                    <a href="#two" class="button special scrolly">Special interests</a>
-                    <a href="#four" class="button special scrolly">Contact Information</a>
-                </p>
-                </div>
-            </section>
-
-        <!-- One -->
-            <section id="one" class="wrapper style2">
-                <div class="inner">
-                    <div>
-                        <div class="box">
-                            <!-- <div class="image fit">
-                                <img src="images/pic01.jpg" alt="" />
-                            </div> -->
-                            <div class="content">
-                                <header class="align-center">
-                                    <h2>Work in Cryptography</h2>
-                                    <p>Currently, I am a Ph.D. student in the <a href="http://www.crypto-uni.lu/index.html">Applied Crypto Group</a> at the <a href="https://wwwen.uni.lu/">University of Luxembourg</a> under the supervision of <a href="
+		
+	</body>
 </html>
