--- a/Anki/ankiblog.html
+++ b/Anki/ankiblog.html
@@ -9,13 +9,13 @@
 		<title>Robin Köstler</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 	</head>
 	<body>
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Robin Köstler's personal page<span></span></a></div>
+				<div class="logo"><a href="../index.html">Robin Köstler's personal page<span></span></a></div>
 				<a href="#menu" class="toggle"><span>Menu</span></a>
 			</header>
 
@@ -23,8 +23,8 @@
 			<nav id="menu">
 				
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="Anki/ankiblog.html">Anki</a></li>
+					<li><a href="../index.html">Home</a></li>
+					<li><a href="../Anki/ankiblog.html">Anki</a></li>
 					<li><a href="#">Music</a></li>
 				</ul>
 			</nav>
