--- a/Anki/ankiblog.html
+++ b/Anki/ankiblog.html
@@ -56,8 +56,9 @@
                                     </header>
 
                                     <p> Frankly, I have been hanging around in the jungle for a way longer time, although only developing the rigorosity to actually get somewhere reasonable in the last two years.
-                                    So, in this first ever blog post of me, I will give it a shot of explaining of<a href="https://www.youtube.com/watch?v=KeDf-1Wr-Ks">how I got here</a> and why it should be in the best interest of all curiosity-driven human being to mimic me at least to some extent.
-                                    
+                                    So, in this first ever blog post of me, I will give it a shot of explaining of<a href="https://www.youtube.com/watch?v=KeDf-1Wr-Ks">how I got here</a> and why it should be in the best interest of all curiosity-driven human beings to mimic me (at least to some extent).
+                                    As I'm writing these first lines and I'm already enjoying my personal freedom of expression, I'm kind of feeling like an artificial intelligence trying to figure out where to head at, including failing miserably at it.
+
                                     </p>
                                 </article>
 							
