--- a/Anki/ankiblog.html
+++ b/Anki/ankiblog.html
@@ -56,10 +56,21 @@
                                     </header>
 
                                     <p> Frankly, I have been hanging around in the jungle for a way longer time, although only developing the rigorosity to actually get somewhere reasonable in the last two years.
-                                    So, in this first ever blog post of me, I will give it a shot of explaining of<a href="https://www.youtube.com/watch?v=KeDf-1Wr-Ks">how I got here</a> and why it should be in the best interest of all curiosity-driven human beings to mimic me (at least to some extent).
-                                    As I'm writing these first lines and I'm already enjoying my personal freedom of expression, I'm kind of feeling like an artificial intelligence trying to figure out where to head at, including failing miserably at it.
+                                    So, in this first ever blog post of me, I will give it a shot of explaining of <a href="https://www.youtube.com/watch?v=KeDf-1Wr-Ks">how I got here</a> and why it should be in the best interest of all curiosity-driven human beings to mimic me (at least to some extent).
+                                    As I'm writing these first lines (and by the way, I'm already enjoying my personal freedom of expression), I'm kind of feeling like an artificial intelligence trying to figure out where to head at, including initally failing miserably at it.
+                                    So, as you may have already noticed, I like to wildly reference music & popular culture, so you can never be sure if a certain link will be actually something useful or, like in the last case, just a random thing.
+                                    </p>
+
+                                    <h4>
+                                        The backstory
+                                    </h4>
+                                    <p>
+                                        I distictly remember that in the 10th grade, I was (or rather my parents did) notice a continuous and concerning decline in my grades in the English class.
+                                        Being finally able to think freely, I was not really interested in studying vocabulary the old-fashioned way, i.e. by desperately trying to cram all of the due vocab into my brain the days before the test, like so many of us did and still continue to do today.
+
 
                                     </p>
+
                                 </article>
 							
 								</ul>	
