--- a/Anki/ankiblog.html
+++ b/Anki/ankiblog.html
@@ -46,8 +46,8 @@
 							</div> -->
 							<div class="content">
 								<header class="align-center">
-									<h2>Work in Cryptography</h2>
-									<p>Currently, I am a Ph.D. student in the <a href="http://www.crypto-uni.lu/index.html">Applied Crypto Group</a> at the <a href="https://wwwen.uni.lu/">University of Luxembourg</a> under the supervision of <a href="http://www.crypto-uni.lu/jscoron/index.html">Prof. Jean-Sébastien Coron</a>.</p>
+									<h2>Blogposts on spaced repetition</h2>
+									
 								</header>
 								<hr />
                                 <article>
@@ -65,11 +65,18 @@
                                         The backstory
                                     </h4>
                                     <p>
-                                        I distictly remember that in the 10th grade, I was (or rather my parents did) notice a continuous and concerning decline in my grades in the English class.
-                                        Being finally able to think freely, I was not really interested in studying vocabulary the old-fashioned way, i.e. by desperately trying to cram all of the due vocab into my brain the days before the test, like so many of us did and still continue to do today.
-
-
+                                        I distictly remember that, in the 10th grade, I was (or rather my parents did) noticing a continuous and concerning decline in my grades in the English class.
+                                        Being finally able to think more out of the box as an adolescent, I was not really interested in studying vocabulary the old-fashioned way, i.e. by desperately trying to cram all of the due vocab into my brain the days before the test, like so many of us did and still continue to do today.
+                                        So, I used the by the time already well-loved mobile internet on my first smartphone to find something better, something appealing.
+                                        That's where I first stumbled upon <a href="https://play.google.com/store/apps/details?id=com.ichi2.anki&hl=en&gl=US">AnkiDroid</a>, which was nothing else than an application for spaced repetition, of which I already had some basic experience with, since my mother bought me a clunky program called <a href="https://www.phase-6.de/">Phase 6</a>, which was a desktop application with nearly no modifiying allowed.
+                                        Motivated by my own initiative, I started to use AnkiDroid almost every day (proof is my review heatmap, not my memory of course), typing in the lectorial vocab and waiting for its magic to happen.
+                                        And it did.
+                                        I must have been so convinced that the year after, when I dropped the dreary Latin and replaced it for the sexy Spanish, I decided to excel at Spanish vocab by employing the newly found AnkiDroid strategy right off the bat.
+                                        Finally being among the very good pupils in a language must have surely provided me with decent self-confidence and a laid-back (no stress prior to exams) feeling of being able to learn anything, if only I would be willing to put in the daily effort.
                                     </p>
+                                    As a happy user, I pursued this way until the end of high school, where I can proudly say that I got very good grades in English and Spanish after all.
+                                    Afterwards, I began to study mathematics, where I wouldn't need any of this knowledge anymore (or so I thought), so I stopped using AnkiDroid, letting all the repetitions and the acquired knowledge fall into pitch darkness.
+                                    I was obvisouly making a mistake, but fair enough: I only viewed Anki as a tool, which served a purpose.
 
                                 </article>
 							
