--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 							</header>
 							<p><b><a href="https://apps.ankiweb.net/">Anki</a></b> is a powerful tool for efficiently learning flashcards, i.e. any type of information that is digestible.</p>
 							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
+								<li><a href="Anki/ankiblog.html" class="button alt">Learn More</a></li>
 							</ul>
 						</div>
 						<div>
