--- a/Anki/ankiblog.html
+++ b/Anki/ankiblog.html
@@ -74,7 +74,10 @@
                                         I must have been so convinced that the year after, when I dropped the dreary Latin and replaced it for the sexy Spanish, I decided to excel at Spanish vocab by employing the newly found AnkiDroid strategy right off the bat.
                                         Finally being among the very good pupils in a language must have surely provided me with decent self-confidence and a laid-back (no stress prior to exams) feeling of being able to learn anything, if only I would be willing to put in the daily effort.
                                     </p>
-                                    <img src="../images/Anki/2013_heatmap.png" alt="Anki review heatmap" width="500" height="600">
+                                    <figure>
+                                        <img src="../images/Anki/2013_heatmap.png" alt="Anki review heatmap" width="500" height="600">
+                                        <figcaption>The ancient discovery, 2013</figcaption>
+                                    </figure>
                                     <p>
                                     As a happy user, I pursued this way until the end of high school, where I can proudly say that I got very good grades in English and Spanish after all.
                                     Afterwards, I began to study mathematics, where I wouldn't need any of this knowledge anymore (or so I thought), so I stopped using AnkiDroid, letting all the repetitions and the acquired knowledge fall into pitch-darkness.
