--- a/Anki/ankiblog.html
+++ b/Anki/ankiblog.html
@@ -75,7 +75,7 @@
                                         Finally being among the very good pupils in a language must have surely provided me with decent self-confidence and a laid-back (no stress prior to exams) feeling of being able to learn anything, if only I would be willing to put in the daily effort.
                                     </p>
                                     <figure>
-                                        <img src="../images/Anki/2013_heatmap.png" alt="Anki review heatmap" width="500" height="600">
+                                        <img src="../images/Anki/2013_heatmap.png" alt="Anki review heatmap">
                                         <figcaption>The ancient discovery, 2013</figcaption>
                                     </figure>
                                     <p>
